# wcag-scanner

./: .cspell.json  .eslintrc.js  .gitignore  .npmignore  CONTRIBUTING.md  README.md  codecov.yml  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  twitter.md
.github/workflows/: lint.yml  publish.yml  typo-check.yml
scrapper/: Cargo.toml
scrapper/src/: lib.rs
scripts/: profile-aria.js  profile-contrast.js  profile-forms.js  profile-images.js
src/: index.ts  scanner.ts
src/ai/: suggestions.ts
src/cli/: index.ts
src/middleware/: express.ts  index.ts
src/react/: WcagDevOverlay.tsx  browserScanner.ts  gemini.ts  index.ts  init.ts
src/reporters/: console.ts  html.ts  index.ts  json.ts
src/rules/: aria.ts  backgroundImages.ts  contrast.ts  forms.ts  images.ts  keyboard.ts  presets.ts  structure.ts
src/types/: index.ts
src/wasm/: index.ts
test/: WcagDevOverlay.test.tsx  aria.test.ts  backgroundImages.test.ts  browserScanner.test.ts  contrast.test.ts  express-middleware.test.ts  forms.test.ts  gemini.test.ts  images.test.ts  index.test.ts  init.test.ts  keyboard.test.ts  react-index.test.ts  reporters.test.ts  scanner.test.ts  structure.test.ts
