[package]
name = "scrapper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
reqwest = { version = "0.12.13" }


[profile.release]
opt-level = "s"  # Optimize for size
lto = true      